--- a/base/2016_kr_03/3.Rmd
+++ b/base/2016_kr_03/3.Rmd
@@ -4,7 +4,8 @@ Question
 $$
 Y_i = \beta_1 + \beta_2 X_{i2} +  \ldots  + \beta _6 X_{i6} + u_i,
 $$
-где $\mathbb{E} \sim \mathcal{N} (0,\sigma_u^2I)$, по 12 наблюдениям. Оказалось, что $RSS = 24$.  Оценка дисперсии случайной составляющей равна
+где $u \sim \mathcal{N} (0,\sigma_u^2I)$, по 12 наблюдениям. Оказалось, что $RSS = 24$.  
+Оценка дисперсии случайной составляющей равна
 
 
 Answerlist
