--- a/base/2016_kr_04_final/2.Rmd
+++ b/base/2016_kr_04_final/2.Rmd
@@ -1,6 +1,7 @@
 Question
 ========
-Оценка $\hat \beta_{2SLS}$  модели  $Y = X\beta + \mathbb{E}$ получена двухшаговым МНК с матрицей инструментальных переменных  $Z$. Если число инструментов превышает количество включенных в модель факторов, то $\hat \beta_{2SLS}$ имеет вид
+Оценка $\hat \beta_{2SLS}$  модели  $Y = X\beta + u$ получена двухшаговым МНК с матрицей инструментальных переменных $Z$. 
+Если число инструментов превышает количество включенных в модель факторов, то $\hat \beta_{2SLS}$ имеет вид
 
 
 
