--- a/base/2016_kr_04_final/3.Rmd
+++ b/base/2016_kr_04_final/3.Rmd
@@ -1,14 +1,14 @@
 Question
 ========
-Обобщенный МНК служит для оценивания регрессионной модели $Y=X\beta + \mathbb{E}$ в случае нарушения следующего условия теоремы Гаусса-Маркова
+Обобщенный МНК служит для оценивания регрессионной модели $Y=X\beta + u$ в случае нарушения следующего условия теоремы Гаусса-Маркова
 
 
 
 Answerlist
 ----------
-*  $\mathrm{Var}(u_i)=\sigma^2_{\mathbb{E}}$
+*  $\mathrm{Var}(u_i)=\sigma^2_u$
 *  $\mathbb{E}(u_i)=0$
-*  $\rank X = k$
+*  $\mathrm{rank} X = k$
 *  $\mathrm{Cov}(u_i, X_i)=0$
 *  $\mathrm{Cov}(Y_i, u_i)=0$
 
