--- a/base/2018_19_final/question_10.Rmd
+++ b/base/2018_19_final/question_10.Rmd
@@ -3,7 +3,7 @@ Question
 
 У Маши две монетки: медная и серебряная. Маша подкинула каждую монетку 100 раз. Затем с помощью метода максимального правдоподобия
 Маша трижды оценила вероятность выпадения орла: для медной монетки, для серебряной и по объединённой выборке. 
-Значения функции правдоподобия равны $\mathbb{E}ll_{copper} = -300$, $\mathbb{E}ll_{silver}=-200$ и $\mathbb{E}ll_{common} = -510$. 
+Значения функции правдоподобия равны $\ell_{copper} = -300$, $\ell_{silver}=-200$ и $\ell_{common} = -510$. 
 
 $LR$ статистика, проверяющая гипотезу о равенстве вероятностей выпадения орла для двух монеток, равна
 
