--- a/base/2017_kr_01/6.Rmd
+++ b/base/2017_kr_01/6.Rmd
@@ -1,6 +1,9 @@
 Question
 ========
-Эмманюэль и Владимир оценили зависимость стоимости подержанных Пежо (одной серии) $Y$ от пробега $X$ (измеряемого в км) с помощью модели парной регрессии $Y = \alpha + \beta X + \mathbb{E}$ по по одной и той же выборке, однако Эмманюэль измерял стоимость машин в евро, а Владимир – в рублях, 1 евро = 65 рублей. Оценки МНК коэффициента наклона регрессии, полученные Эмманюэлем $\beta_E$ и Владимиром $\beta_B$ связаны следующим образом:
+Эмманюэль и Владимир оценили зависимость стоимости подержанных Пежо (одной серии) $Y$ 
+от пробега $X$ (измеряемого в км) с помощью модели парной регрессии $Y = \alpha + \beta X + u$ по по одной и той же выборке, 
+однако Эмманюэль измерял стоимость машин в евро, а Владимир – в рублях, 1 евро = 65 рублей. 
+Оценки МНК коэффициента наклона регрессии, полученные Эмманюэлем $\beta_E$ и Владимиром $\beta_B$ связаны следующим образом:
 
 
 Answerlist
