--- a/base/om_2021_fall/test_03_06.Rmd
+++ b/base/om_2021_fall/test_03_06.Rmd
@@ -6,7 +6,7 @@ $$
 y_i = \beta_1 + \beta_2 x_i + \beta_3 x_i^2 + u_i\cdot x_i.
 $$
 
-Буквой $X$ обозначена матрицы всех предикторов. 
+Буквой $X$ обозначена матрица всех предикторов. 
 Выполнены классические предпосылки на ошибку $\mathbb E(u_i \mid X) = 0$, $\mathrm{Var}(u_i \mid X) = \sigma^2$, $\mathrm{Cov}(u_i \mid X) = 0$.
 
 Найдите условную дисперсию $\mathrm{Var}(y_i \mid X)$.
@@ -29,7 +29,7 @@ Solution
 
 Meta-information
 ================
-exname: conditional expected value in regression
+exname: conditional variance in regression
 extype: schoice
 exsolution: 100000
 exshuffle: 6
