--- a/base/om_2021_fall/test_03_09.Rmd
+++ b/base/om_2021_fall/test_03_09.Rmd
@@ -1,23 +1,32 @@
 Question
 ========
 
-В модели множественной регрессии $\hat y_i = 2 + 3 x_i + 7 z_i -6 w_i$ оценённая сумма квадратов равна $777$. 
-Для оценивания использовали 200 наблюдений. 
+Рассмотрим модель
+$$
+y_i = \beta_1 + \beta_2 x_i + \beta_3 z_i + u_i.
+$$
 
-Найдите сумму $\sum_i \hat y_i (\hat y_i - \bar y)$.
+Все предпосылки классической регрессионной модели выполнены. 
+По 25 наблюдениям оказалось, что сумма квадратов остатков равна $RSS = 60$. 
+
+В регрессии $z$ на остальные предикторы оказалось, что $RSS_z = 30$.
+
+Найдите оценку дисперсии $\widehat{\mathrm{Var}}(\hat \beta_3 \mid X)$.
+
+Ответ вводите с точность до двух знаков после десятичной точки. 
 
 Solution
 ========
 
-По определению $TSS$.
+Обратите внимание на число предикторов :)
 
 Meta-information
 ================
-exname: find modified ess
+exname: estimate beta hat variance
 extype: num
-exsolution: 777
+exsolution: 0.09
 extol: 0.01
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: OLS/Sum of squares
+exsection: combat_03/OLS/Variance and covariance
