--- a/base/om_2021_fall/test_04_07.Rmd
+++ b/base/om_2021_fall/test_04_07.Rmd
@@ -1,32 +1,44 @@
 Question
 ========
 
-Рассмотрим модель
-$$
-y_i = \beta_1 + \beta_2 x_i + u_i.
-$$
+Петя и Вася проверяют гипотезу $\beta_x=0$ против альтернативной $\beta_x \neq 0$ по одним и тем же данным, 
+одни и тем же способом. 
+Единственная разница в том, что Петя использует уровень значимости $\alpha = 0.01$, а Вася — $0.02$.
 
-Буквой $X$ обозначена матрица всех предикторов. 
-Выполнены классические предпосылки на ошибку $\mathbb E(u_i \mid X) = 0$, $\mathrm{Var}(u_i \mid X) = \sigma^2$, $\mathrm{Cov}(u_i \mid X) = 0$.
+Рассмотрим 4 ситуации:
 
-По 100 наблюдениям оказалось, что $\sum x_i^2 = 40$, $\sum (x_i - \bar x)^2 = 20$.
+А. Петя отверг $H_0$, Вася отверг $H_0$.
 
-Найдите величину $\mathrm{Var}(\hat \beta_2 \mid X) / \sigma^2$.
+Б. Петя отверг $H_0$, Вася не отверг $H_0$.
 
-Ответ вводите с точность до двух знаков после десятичной точки. 
+В. Петя не отверг $H_0$, Вася отверг $H_0$.
+
+Г. Петя не отверг $H_0$, Вася не отверг $H_0$.
+
+Какие из этих ситуаций возможны?
+
+Answerlist
+----------
+* только А, В и Г 
+* только А и Г
+* все возможны
+* только А, Б, Г
+* только А, Б 
+* только В, Г
+
 
 Solution
 ========
 
-Можно воспользоваться готовой формулой для условной дисперсии :)
+Более высокая ошибка первого рода означает более частое отвержение $H_0$. 
 
 Meta-information
 ================
-exname: plug-in variance exercise
-extype: num
-exsolution: 0.05 
-extol: 0.01
+exname: significance level
+extype: schoice
+exsolution: 100000
+exshuffle: 6
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: combat_03/OLS/Variance and covariance
+exsection: OLS/Coefficient t-test
