--- a/base/om_2021_fall/test_04_08.Rmd
+++ b/base/om_2021_fall/test_04_08.Rmd
@@ -1,30 +1,29 @@
 Question
 ========
 
-Рассмотрим модель
-$$
-y_i = \beta_1 + \beta_2 x_i + \beta_3 z_i + u_i.
-$$
+Петя и Вася строят доверительные интервалы для коэффициента наклона в модели парной регрессии. 
+Оба строят интервалы по общему набору данных в 1000 наблюдений. 
+Петя строит 95\%-й интервал, а Вася — в два раза более узкий. 
 
-Все предпосылки классической регрессионной модели выполнены. 
-По 25 наблюдениям оказалось, что сумма квадратов остатков равна $RSS = 60$. 
+Какую вероятность накрытия имеет Васин интервал?
 
-Найдите несмещённую оценку для дисперсии случайной ошибки. 
+Ответ вводите с точностью до двух знаков после десятичной точки. 
 
-Ответ вводите с точность до двух знаков после десятичной точки. 
+Можно использовать функции из статистических пакетов или таблицы. 
 
 Solution
 ========
 
-Обратите внимание на число регрессоров!
+Подумайте, во сколько раз нужно сократить критическое значение нормального распределения, чтобы
+ширина доверительного интервала сократилась вдвое. 
 
 Meta-information
 ================
-exname: estimate error variance
+exname: halve ci width
 extype: num
-exsolution: 2.73 
+exsolution: 0.67 
 extol: 0.01
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: combat_03/OLS/Variance and covariance
+exsection: OLS/Coefficient confidence interval
