--- a/base/om_2021_fall/test_04_06.Rmd
+++ b/base/om_2021_fall/test_04_06.Rmd
@@ -1,41 +1,25 @@
 Question
 ========
 
-Рассмотрим модель
-$$
-y_i = \beta_1 + \beta_2 x_i + \beta_3 x_i^2 + u_i\cdot x_i.
-$$
+Винни-Пух построил классический доверительный интервал для коэффициента $\beta_z$ в модели 
+$y_i = \beta_1 + \beta_x x_i + \beta_z z_i + u_i$. 
+Интервал получился широкий, $[-20; 40]$.
 
-Буквой $X$ обозначена матрица всех предикторов. 
-Выполнены классические предпосылки на ошибку $\mathbb E(u_i \mid X) = 0$, $\mathrm{Var}(u_i \mid X) = \sigma^2$, $\mathrm{Cov}(u_i \mid X) = 0$.
-
-Найдите условную дисперсию $\mathrm{Var}(y_i \mid X)$.
-
-
-Answerlist
-----------
-* $\sigma^2 \cdot x_i^2$
-* $\sigma^2$
-* $x_i^2$
-* $x_i$
-* $u_i^2$
-* $\sigma x_i$
-
+Какую оценку $\hat\beta_z$ получил Винни-Пух?
 
 Solution
 ========
 
-Подумайте, какие величины являются константами или известными случайными величинами, если известна матрица $X$. 
+Классический доверительный интервал симметричен относительно точечной оценки. 
 
 Meta-information
 ================
-exname: conditional variance in regression
-extype: schoice
-exsolution: 100000
-exshuffle: 6
+exname: find the middle point of an interval
+extype: num
+exsolution: 10
+extol: 0.01
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: combat_03/OLS/Variance and covariance
-
+exsection: OLS/Coefficient confidence interval
 
