--- a/base/om_2021_fall/test_04_09.Rmd
+++ b/base/om_2021_fall/test_04_09.Rmd
@@ -1,32 +1,39 @@
 Question
 ========
 
-Рассмотрим модель
+Капитолина оценила регрессию $\hat y_i = 0.7 + 2x_i + 3w_i$ с помощью МНК по 1000 наблюдениям.
+
+Оценённая ковариационная матрица оценок коэффициентов равна 
 $$
-y_i = \beta_1 + \beta_2 x_i + \beta_3 z_i + u_i.
+\mathrm{Var}(\hat\beta) = 
+\begin{pmatrix}
+4 & 1 & -1 \\
+1 & 9 & 0 \\
+-1 & 0 & 16 \\
+\end{pmatrix}.
 $$
 
-Все предпосылки классической регрессионной модели выполнены. 
-По 25 наблюдениям оказалось, что сумма квадратов остатков равна $RSS = 60$. 
+Наблюдения являются независимыми, на ошибки выполнены классические предпосылки, $\mathbb E(u_i \mid X) = 0$, $\mathrm{Var}(u_i \mid X) = \sigma^2$,
+$\mathrm{Cov}(u_i, u_j \mid X) = 0$ для $i\neq j$.
 
-В регрессии $z$ на остальные предикторы оказалось, что $RSS_z = 30$.
 
-Найдите оценку дисперсии $\widehat{\mathrm{Var}}(\hat \beta_3 \mid X)$.
+Постройте 95\%-й доверительный интервал для разницы $\beta_x - \beta_w$.
 
-Ответ вводите с точность до двух знаков после десятичной точки. 
+
+В ответ введите правую границу с точностью до двух знаков после десятичной точки. 
 
 Solution
 ========
 
-Обратите внимание на число предикторов :)
+Для некоррелированных величин дисперсия разности равна сумме дисперсий. 
 
 Meta-information
 ================
-exname: estimate beta hat variance
+exname: estimate beta difference
 extype: num
-exsolution: 0.09
-extol: 0.01
+exsolution: 8.80
+extol: 0.02
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: combat_03/OLS/Variance and covariance
+exsection: OLS/Coefficient confidence interval
