more corrections test 4

--- a/base/om_2021_fall/test_04_04.Rmd
+++ b/base/om_2021_fall/test_04_04.Rmd
@@ -9,6 +9,8 @@ $\mathrm{Cov}(u_i, u_j \mid X) = 0$ для $i\neq j$.
 
 Найдите 80\% доверительный интервал для коэффициента $\beta_x$. 
 
+Можно использовать функции из статистических пакетов или таблицы. 
+
 В ответе укажите правую границу интервала с точнотью до двух знаков после десятичной точки. 
 
 Solution
