--- a/base/om_2021_fall/test_04_09.Rmd
+++ b/base/om_2021_fall/test_04_09.Rmd
@@ -19,6 +19,7 @@ $\mathrm{Cov}(u_i, u_j \mid X) = 0$ для $i\neq j$.
 
 Постройте 95\%-й доверительный интервал для разницы $\beta_x - \beta_w$.
 
+Можно использовать функции из статистических пакетов или таблицы. 
 
 В ответ введите правую границу с точностью до двух знаков после десятичной точки. 
 
