--- a/base/om_2021_fall/test_04_02.Rmd
+++ b/base/om_2021_fall/test_04_02.Rmd
@@ -8,7 +8,7 @@ $\mathrm{Cov}(u_i, u_j \mid X) = 0$ для $i\neq j$.
 Пантелеймон знает, что сумма квадратов остатков в исходной регрессии оказалась равной $100$, а во вспомогательной регрессии 
 $\hat x_i = \hat \gamma$ сумма квадратов остатков равна $20$. Обе регрессии построены по 102 наблюдениям.
 
-Какую несмещённую оценку для $\mathrm{Var}(\hat\beta_2 \bar X)$ получит Пантелеймон?
+Какую несмещённую оценку для $\mathrm{Var}(\hat\beta_2 \mid X)$ получит Пантелеймон?
 
 Ответ вводите с точностью до двух знаков после десятичной точки. 
 
