--- a/base/om_2021_fall/test_05_04.Rmd
+++ b/base/om_2021_fall/test_05_04.Rmd
@@ -1,31 +1,35 @@
 Question
 ========
 
-Агнесса оценила регрессию $\hat y_i = 0.7 + 2x_i + 3w_i$ с помощью МНК по 1000 наблюдений.
-Классические стандартные ошибки коэффициентов равны $0.1$, $0.2$ и $0.3$ соответственно. 
+Пантелеймон оценил парную регрессию по 50 наблюдениям
+$$
+\hat y_i = 8.9 + 12.9 x_i.
+$$
+Оценка дисперсии прогноза при $x=1$ равна $100$. 
+Оценка дисперсии случайной ошибки равна $400$.
 
-Наблюдения являются независимыми, на ошибки выполнены классические предпосылки, $\mathbb E(u_i \mid X) = 0$, $\mathrm{Var}(u_i \mid X) = \sigma^2$,
-$\mathrm{Cov}(u_i, u_j \mid X) = 0$ для $i\neq j$.
+Предпосылки классической линейной модели выполнены, ошибки имеют нормальное распределение. 
 
-Найдите 80\% доверительный интервал для коэффициента $\beta_x$. 
+Постройте 95\%-й доверительный интервал для $\mathbb{E}(y_i \mid x_i = 1)$.
 
-Можно использовать функции из статистических пакетов или таблицы. 
+В ответе укажите правую границу интервала с точностью до двух знаков после десятичной точки. 
 
-В ответе укажите правую границу интервала с точнотью до двух знаков после десятичной точки. 
 
 Solution
 ========
 
-Обратите внимание на требуемое критическое значение статистики. 
+К точечному прогнозу прибавим критическое значение умножить на стандартную ошибку.
 
 Meta-information
 ================
-exname: confidence interval for coefficient asymptotic
+exname: confidence interval for mean
 extype: num
-exsolution: 2.26
-extol: 0.01
+exsolution: 41.91
+extol: 0.1
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: OLS/Coefficient confidence interval
+exsection: OLS/Mean forecast confidence interval
+
+
 
