--- a/base/om_2021_fall/test_05_08.Rmd
+++ b/base/om_2021_fall/test_05_08.Rmd
@@ -1,29 +1,27 @@
 Question
 ========
 
-Петя и Вася строят доверительные интервалы для коэффициента наклона в модели парной регрессии. 
-Оба строят интервалы по общему набору данных в 1000 наблюдений. 
-Петя строит 95\%-й интервал, а Вася — в два раза более узкий. 
+Пантелеймон предполагает, что зависимость $y$ от $x$ линейная.
+У Пантелеймона данные по 10 городам.
+Он считает, что коэффициент наклона не зависит от города, 
+а вот константа в каждом городе может быть своя. 
 
-Какую вероятность накрытия имеет Васин интервал?
+Всего у Пантелеймона 200 наблюдений. 
 
-Ответ вводите с точностью до двух знаков после десятичной точки. 
-
-Можно использовать функции из статистических пакетов или таблицы. 
+Сколько дамми-переменных понадобиться ввести Пантелеймону в дополнение к модели парной регрессии? 
 
 Solution
 ========
 
-Подумайте, во сколько раз нужно сократить критическое значение нормального распределения, чтобы
-ширина доверительного интервала сократилась вдвое. 
+Количество дамми-переменных на одну меньше числа значений признака.
 
 Meta-information
 ================
-exname: halve ci width
+exname: number of dummy variables
 extype: num
-exsolution: 0.67 
+exsolution: 9
 extol: 0.01
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: OLS/Coefficient confidence interval
+exsection: OLS/Dummy variables
