--- a/base/om_2021_fall/test_05_02.Rmd
+++ b/base/om_2021_fall/test_05_02.Rmd
@@ -16,26 +16,28 @@ $$
 
 Предпосылки классической линейной модели выполнены, ошибки имеют нормальное распределение. 
 
-Постройте 95\%-й доверительный интервал для $\mathbb E(y_i \mid x_i = 1)$.
+Оцените дисперсию прогноза для $x=1$.
 
-В ответе укажите правую границу интервала с точностью до двух знаков после десятичной точки. 
+Ответ вводите с точностью до двух знаков после десятичной точки. 
 
 
 Solution
 ========
 
-К точечному прогнозу прибавим критическое значение умножить на стандартную ошибку.
+$$
+\mathrm{Var}(\hat\beta_1 + \hat\beta2 \cdot 1) =\mathrm{Var}(\hat\beta_1) + \mathrm{Var}(\hat\beta_2) +2\mathrm{Cov}(\hat\beta_1, \hat\beta_2)
+$$
 
 Meta-information
 ================
-exname: mean forecast confidence interval
+exname: estimate var of forecast
 extype: num
-exsolution: 27.9
-extol: 0.2
+exsolution: 9.24
+extol: 0.01
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: OLS/Mean forecast confidence interval
+exsection: OLS/Variance and covariance
 
 
 
