--- a/base/om_2021_fall/test_05_07.Rmd
+++ b/base/om_2021_fall/test_05_07.Rmd
@@ -1,44 +1,35 @@
 Question
 ========
 
-Петя и Вася проверяют гипотезу $\beta_x=0$ против альтернативной $\beta_x \neq 0$ по одним и тем же данным, 
-одни и тем же способом. 
-Единственная разница в том, что Петя использует уровень значимости $\alpha = 0.01$, а Вася — $0.02$.
+Пантелеймон оценил модель парной регрессии 
+$$
+\ln \hat y_i = 0.4 + 1.2 \ln x_i.
+$$
 
-Рассмотрим 4 ситуации:
-
-А. Петя отверг $H_0$, Вася отверг $H_0$.
-
-Б. Петя отверг $H_0$, Вася не отверг $H_0$.
-
-В. Петя не отверг $H_0$, Вася отверг $H_0$.
-
-Г. Петя не отверг $H_0$, Вася не отверг $H_0$.
-
-Какие из этих ситуаций возможны?
+Какая интерпретация уравнения является верной?
 
 Answerlist
 ----------
-* только А, В и Г 
-* только А и Г
-* все возможны
-* только А, Б, Г
-* только А, Б 
-* только В, Г
+* с ростом $x$ на один процент величина $y$ растёт в среднем на 1.2 процента
+* с ростом $x$ на единицу величина $y$ растёт в среднем на 1.2 единицы
+* с ростом $x$ на один процент величина $y$ растёт в среднем на 1.2 единицы
+* с ростом $x$ на единицу величина $y$ растёт в среднем на 1.2 процента
+* с ростом $x$ на единицу величина $y$ растёт в среднем на 120 процентов
+* нет верного ответа
 
 
 Solution
 ========
 
-Более высокая ошибка первого рода означает более частое отвержение $H_0$. 
+Коэффициент у модели в логарифмах интерпретируется как эластичность. 
 
 Meta-information
 ================
-exname: significance level
+exname: elasticity interpretation
 extype: schoice
 exsolution: 100000
 exshuffle: 6
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: OLS/Coefficient t-test
+exsection: OLS/Coefficients interpretation
