--- a/base/om_2021_fall/test_05_09.Rmd
+++ b/base/om_2021_fall/test_05_09.Rmd
@@ -1,40 +1,32 @@
 Question
 ========
 
-Капитолина оценила регрессию $\hat y_i = 0.7 + 2x_i + 3w_i$ с помощью МНК по 1000 наблюдениям.
-
-Оценённая ковариационная матрица оценок коэффициентов равна 
+Сулейман оценил две модели множественной регрессии по 304 наблюдениям.
+Модель А:
 $$
-\mathrm{Var}(\hat\beta) = 
-\begin{pmatrix}
-4 & 1 & -1 \\
-1 & 9 & 0 \\
--1 & 0 & 16 \\
-\end{pmatrix}.
+y_i = \beta_1 + \beta_2 x_i + \beta_3 z_i + \beta_4 w_i + u_i, RSS_a = 150.
+$$
+Модель Б:
+$$
+y_i = \beta_1 + \beta_4 w_i + u_i, RSS_b = 200.
 $$
 
-Наблюдения являются независимыми, на ошибки выполнены классические предпосылки, $\mathbb E(u_i \mid X) = 0$, $\mathrm{Var}(u_i \mid X) = \sigma^2$,
-$\mathrm{Cov}(u_i, u_j \mid X) = 0$ для $i\neq j$.
+Найдите значение $F$-статистики для проверки гипотезы об истинности ограниченной модели. 
 
-
-Постройте 95\%-й доверительный интервал для разницы $\beta_x - \beta_w$.
-
-Можно использовать функции из статистических пакетов или таблицы. 
-
-В ответ введите правую границу с точностью до двух знаков после десятичной точки. 
 
 Solution
 ========
-
-Для некоррелированных величин дисперсия разности равна сумме дисперсий. 
+$$
+F = \frac{(RSS_r - RSS_{ur}) / r}{RSS_{ur} / (n - k_{ur})}.
+$$
 
 Meta-information
 ================
-exname: estimate beta difference
+exname: F statistics
 extype: num
-exsolution: 8.80
-extol: 0.02
+exsolution: 100
+extol: 0.01
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: OLS/Coefficient confidence interval
+exsection: OLS/Nested models F-test
