--- a/base/om_2021_fall/test_06_04.Rmd
+++ b/base/om_2021_fall/test_06_04.Rmd
@@ -1,35 +1,30 @@
 Question
 ========
 
-Пантелеймон оценил парную регрессию по 50 наблюдениям
-$$
-\hat y_i = 8.9 + 12.9 x_i.
-$$
-Оценка дисперсии прогноза при $x=1$ равна $100$. 
-Оценка дисперсии случайной ошибки равна $400$.
+Какую цель имеет использование LASSO?
 
-Предпосылки классической линейной модели выполнены, ошибки имеют нормальное распределение. 
-
-Постройте 95\%-й доверительный интервал для $\mathbb{E}(y_i \mid x_i = 1)$.
-
-В ответе укажите правую границу интервала с точностью до двух знаков после десятичной точки. 
-
+Answerlist
+----------
+* Сильно уменьшить дисперсию оценок за счёт небольшого смещения оценок.
+* Сильно уменьшить дисперсию оценок без смещения оценок.
+* Сильно увеличить дисперсию оценок без смещения оценок.
+* Сильно уменьшить смещение оценок за счёт небольшого роста дисперсии оценок.
+* Сильно уменьшить смещение оценок за счёт небольшого падения дисперсии оценок.
+* Сильно увеличить дисперсию оценок за счёт небольшого смещения оценок.
 
 Solution
 ========
 
-К точечному прогнозу прибавим критическое значение умножить на стандартную ошибку.
+Большая дисперсия и смещение — это нежелательные свойства. 
+
 
 Meta-information
 ================
-exname: confidence interval for mean
-extype: num
-exsolution: 41.91
-extol: 0.1
+exname: LASSO idea
+extype: schoice
+exsolution: 100000
+exshuffle: 6
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: OLS/Mean forecast confidence interval
-
-
-
+exsection: LASSO
