--- a/base/om_2021_fall/test_06_05.Rmd
+++ b/base/om_2021_fall/test_06_05.Rmd
@@ -1,41 +1,30 @@
 Question
 ========
 
-По набору данных cars из R оцените модель
-$$
-dist_i = \beta_1 + \beta_2 speed_i + u_i.
-$$
+Выберите верное утверждение про штрафную функцию LASSO.
 
-Ошибки модели нормально распределены и удовлетворяют классическим предпосылкам. 
-
-Для машины со стартовой скоростью 20 миль в час постройте 95\%-й доверительный интервал для 
-ожидаемой длины тормозного пути в футах. 
-
-В ответе укажите правую границу интервала с точностью до двух знаков после десятичной точки. 
-
-
-Набор данных встроен в R и доступен по ссылке:
-https://github.com/vincentarelbundock/Rdatasets/raw/master/csv/datasets/cars.csv
-
+Answerlist
+----------
+*  
+* Сильно уменьшить дисперсию оценок без смещения оценок.
+* Сильно увеличить дисперсию оценок без смещения оценок.
+* Сильно уменьшить смещение оценок за счёт небольшого роста дисперсии оценок.
+* Сильно уменьшить смещение оценок за счёт небольшого падения дисперсии оценок.
+* Сильно увеличить дисперсию оценок за счёт небольшого смещения оценок.
 
 Solution
 ========
 
-```{r, eval=FALSE}
-model = lm(data = cars, dist ~ ...)
-new = data.frame(speed = ...)
-predict(model, ..., interval = '...')
-```
+Большая дисперсия и смещение — это нежелательные свойства. 
 
 
 Meta-information
 ================
-exname: confidence interval for mean R
-extype: num
-exsolution: 66.89
-extol: 0.01
+exname: LASSO idea
+extype: schoice
+exsolution: 100000
+exshuffle: 6
 exextra[Type]: Calculation
 exextra[Language]: Russian
 exextra[Level]: Literacy
-exsection: OLS/Mean forecast confidence interval
-
+exsection: LASSO
